@@ -67,11 +67,11 @@
  *----------------------------------------------------------*/
 
 #define configUSE_PREEMPTION		1
-#define configUSE_IDLE_HOOK			0
+#define configUSE_IDLE_HOOK		0
 #define configMAX_PRIORITIES		( ( unsigned portBASE_TYPE ) 5 )
-#define configUSE_TICK_HOOK			1
-#define configCPU_CLOCK_HZ			( ( unsigned long ) 99000000 )
-#define configTICK_RATE_HZ			( ( portTickType ) 1000 )
+#define configUSE_TICK_HOOK		0
+#define configCPU_CLOCK_HZ		( ( unsigned long ) 99000000 )
+#define configTICK_RATE_HZ		( ( portTickType ) 1000 )
 #define configMINIMAL_STACK_SIZE	( ( unsigned short ) 80 )
 #define configTOTAL_HEAP_SIZE		( ( size_t ) ( 19 * 1024 ) )
 #define configMAX_TASK_NAME_LEN		( 12 )
@@ -79,27 +79,27 @@
 #define configUSE_16_BIT_TICKS		0
 #define configIDLE_SHOULD_YIELD		0
 #define configUSE_CO_ROUTINES 		0
-#define configUSE_MUTEXES			1
+#define configUSE_MUTEXES		1
 
 #define configMAX_CO_ROUTINE_PRIORITIES ( 2 )
 
 #define configUSE_COUNTING_SEMAPHORES 	0
-#define configUSE_ALTERNATIVE_API 		0
+#define configUSE_ALTERNATIVE_API 	0
 #define configCHECK_FOR_STACK_OVERFLOW	2
-#define configUSE_RECURSIVE_MUTEXES		1
-#define configQUEUE_REGISTRY_SIZE		10
+#define configUSE_RECURSIVE_MUTEXES	1
+#define configQUEUE_REGISTRY_SIZE	10
 #define configGENERATE_RUN_TIME_STATS	1
 
 /* Set the following definitions to 1 to include the API function, or zero
 to exclude the API function. */
 
-#define INCLUDE_vTaskPrioritySet			1
-#define INCLUDE_uxTaskPriorityGet			1
-#define INCLUDE_vTaskDelete					1
-#define INCLUDE_vTaskCleanUpResources		0
-#define INCLUDE_vTaskSuspend				1
-#define INCLUDE_vTaskDelayUntil				1
-#define INCLUDE_vTaskDelay					1
+#define INCLUDE_vTaskPrioritySet	1
+#define INCLUDE_uxTaskPriorityGet	1
+#define INCLUDE_vTaskDelete		1
+#define INCLUDE_vTaskCleanUpResources	0
+#define INCLUDE_vTaskSuspend		1
+#define INCLUDE_vTaskDelayUntil		1
+#define INCLUDE_vTaskDelay		1
 #define INCLUDE_uxTaskGetStackHighWaterMark	1
 
 /*-----------------------------------------------------------
